--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.0)
-project(test_toilet CXX)
-set(CMAKE_CXX_STANDARD 11)
+project(vibester CXX)
+set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 # Add OpenGL explicitly
@@ -18,17 +18,26 @@ set(OpenGL_GL_PREFERENCE "LEGACY")
 set(CMAKE_POLICY_DEFAULT_CMP0072 OLD)
 
 FetchContent_Declare(
-    raylib
-    GIT_REPOSITORY "https://github.com/raysan5/raylib.git"
-    GIT_TAG "master"
-    GIT_PROGRESS TRUE
+        raylib
+        GIT_REPOSITORY "https://github.com/raysan5/raylib.git"
+        GIT_TAG "master"
+        GIT_PROGRESS TRUE
 )
 FetchContent_MakeAvailable(raylib)
 
 file(GLOB_RECURSE PROJECT_SOURCES CONFIGURE_DEPENDS "${CMAKE_CURRENT_LIST_DIR}/src/*.cpp")
 set(PROJECT_INCLUDE "${CMAKE_CURRENT_LIST_DIR}/src/")
+
+# Main game executable
 add_executable(${PROJECT_NAME})
 target_sources(${PROJECT_NAME} PRIVATE ${PROJECT_SOURCES})
 target_include_directories(${PROJECT_NAME} PRIVATE ${PROJECT_INCLUDE})
 target_link_libraries(${PROJECT_NAME} PRIVATE raylib ${OPENGL_LIBRARIES})
 target_compile_definitions(${PROJECT_NAME} PUBLIC ASSETS_PATH="${CMAKE_CURRENT_SOURCE_DIR}/assets/")
+
+# test_toilet target
+add_executable(test_toilet)
+target_sources(test_toilet PRIVATE ${PROJECT_SOURCES})
+target_include_directories(test_toilet PRIVATE ${PROJECT_INCLUDE})
+target_link_libraries(test_toilet PRIVATE raylib ${OPENGL_LIBRARIES})
+target_compile_definitions(test_toilet PUBLIC ASSETS_PATH="${CMAKE_CURRENT_SOURCE_DIR}/assets/")
